# src/main/resources/br/jus/trf2/siga/ex/api/swagger.yaml
@@ -362,6 +362,7 @@ paths:
           description: Error ocurred
           schema:
             $ref: "#/definitions/Error"
+            
   /token/criar:
     post:
       consumes: ["application/x-www-form-urlencoded"]
@@ -382,6 +383,28 @@ paths:
           description: Error ocurred
           schema:
             $ref: "#/definitions/Error"
+            
+  /acessos:
+    get:
+      description: Listar os últimos acessos
+      tags: [utils]
+      parameters: []
+      responses:
+        200:
+          description: Successful response
+          schema:
+            type: object
+            properties:
+              list:
+                type: array
+                items:
+                  $ref: "#/definitions/AcessoItem"
+        500:
+          description: Error ocurred
+          schema:
+            $ref: "#/definitions/Error"
+
+
             
   /pessoa/{texto}/pesquisar:
     get:
@@ -460,6 +483,16 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/Marca"
+
+  AcessoItem:
+    description: Acessos recentes
+    type: object
+    properties:
+      datahora:
+        type: string
+        format: date-time
+      ip:
+        type: string
 
   Marca:
     description: Etiquetas relacionadas a um documento
